View Issue Details

IDProjectCategoryView StatusLast Update
0025718Open CASCADEOCCT:Modeling Algorithmspublic2015-08-28 14:55
ReporterabvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025718: Unstable work of tests in bug5805 series
DescriptionI have executed tests on master (a550f6) several times and noticed that test bugs modalg_2 bug5805_19, as well as _41-43, is very unstable: sometimes it produces some shape, sometimes totally fails. This highlights severe instability in underlying algorithms, to be fixed.
Steps To Reproducebugs modalg_2 bug5805_19,bug5805_41,bug5805_42,bug5805_43
TagsNo tags attached.
Test case numberbugs modalg_2(007) bug5805_19, bug5805_41, bug5805_42, bug5805_43

Relationships

related to 0005805 closedbugmaster Open CASCADE BRepOffsetAPI_MakeThickSolid behaves unstably and produces very different results. 

Activities

abv

2015-02-08 22:25

manager   ~0037202

Note that the same tests are regularly appear in compare logs showing differences in CPU time, e.g. here is extract of dozen runs of tests I have executed on current master:

-- parallel mode --

USER CPU bugs modalg_2 bug5805_19: 2.4180155 / 1.3884089 [+74.16%]
USER CPU bugs modalg_2 bug5805_43: 2.1684139 / 1.2636081 [+71.60%]

USER CPU bugs modalg_2 bug5805_19: 2.9796191 / 1.3884089 [+114.61%]
USER CPU bugs modalg_2 bug5805_41: 5.1012327 / 4.1340265 [+23.40%]
USER CPU bugs modalg_2 bug5805_42: 2.7924179 / 1.2792082 [+118.29%]

USER CPU bugs modalg_2 bug5805_41: 2.2464144 / 4.1340265 [-45.66%]

USER CPU bugs modalg_2 bug5805_19: 2.4024154 / 1.3884089 [+73.03%]

USER CPU bugs modalg_2 bug5805_42: 2.2620145 / 1.2792082 [+76.83%]
USER CPU bugs modalg_2 bug5805_43: 2.2308143 / 1.2636081 [+76.54%]

USER CPU bugs modalg_2 bug5805_41: 2.0748133 / 4.1340265 [-49.81%]
USER CPU bugs modalg_2 bug5805_42: 2.2932147 / 1.2792082 [+79.27%]
   
-- sequential mode --

USER CPU bugs modalg_2 bug5805_41: 2.3868153 / 1.248008 [+91.25%]
USER CPU bugs modalg_2 bug5805_43: 1.3104084 / 0.7020045 [+86.67%]

USER CPU bugs modalg_2 bug5805_41: 2.3712152 / 1.248008 [+90.00%]
USER CPU bugs modalg_2 bug5805_42: 1.3572087 / 0.7176046 [+89.13%]

USER CPU bugs modalg_2 bug5805_43: 1.3260085 / 0.7020045 [+88.89%]

USER CPU bugs modalg_2 bug5805_17: 2.4336156 / 1.2324079 [+97.47%]
USER CPU bugs modalg_2 bug5805_41: 2.4492157 / 1.248008 [+96.25%]
USER CPU bugs modalg_2 bug5805_42: 1.3260085 / 0.7176046 [+84.78%]

USER CPU bugs modalg_2 bug5805_41: 2.4336156 / 1.248008 [+95.00%]

USER CPU bugs modalg_2 bug5805_41: 2.4336156 / 1.248008 [+95.00%]
USER CPU bugs modalg_2 bug5805_43: 1.3260085 / 0.7020045 [+88.89%]

USER CPU bugs modalg_2 bug5805_42: 1.3260085 / 0.7176046 [+84.78%]

git

2015-02-19 15:34

administrator   ~0037701

Branch CR25718 has been created by msv.

SHA-1: a567fb7395fbf931f784f2615f570e3f4681ab0d


Detailed log of new commits:

Author: msv
Date: Mon Feb 9 15:09:17 2015 +0300

    0025718: Unstable work of tests in bug5805 series
    
    Force stable work of the algorithm BRepAlgo_Loop by replacing DataMap collections with List and/or IndexedDataMap in order to provide iterations independent on the memory addresses.
    
    Avoid uninitialized fields in default constructor of Extrema_POnSurf.

msv

2015-02-19 15:39

developer   ~0037703

Dear emv, please review the branch CR25718.

emv

2015-02-19 16:01

developer   ~0037708

Reviewed.

git

2015-02-20 19:40

administrator   ~0037776

Branch CR25718 has been updated forcibly by mkv.

SHA-1: a33fcd9c1fb1fe546d8af0862e38d7a0a88b62ad

mkv

2015-02-25 17:20

tester   ~0037881

Dear BugMaster,
Branch CR25718 was rebased on current master of occt git-repository.

mkv

2015-02-25 17:21

tester   ~0037882

Last edited: 2015-02-25 17:22

Dear BugMaster,
Branch CR25718 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: a33fcd9c1fb1fe546d8af0862e38d7a0a88b62ad

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 2 (2 on master)

products component :
Linux: 11 (11 on master)
Windows: 4 (4 on master)

Regressions/Differences:
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/summary.html
http://occt-tests/CR25718-master-occt-64/Debian60-64/summary.html
offset faces_type_a(002) A3, A4, A9

Testing cases:
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/bugs/modalg_2/bug5805_19.html
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/bugs/modalg_2/bug5805_41.html
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/bugs/modalg_2/bug5805_42.html
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/bugs/modalg_2/bug5805_43.html

http://occt-tests/CR25718-master-occt-64/Debian60-64/bugs/modalg_2/bug5805_19.html
http://occt-tests/CR25718-master-occt-64/Debian60-64/bugs/modalg_2/bug5805_41.html
http://occt-tests/CR25718-master-occt-64/Debian60-64/bugs/modalg_2/bug5805_42.html
http://occt-tests/CR25718-master-occt-64/Debian60-64/bugs/modalg_2/bug5805_43.html

bugs modalg_2(007) bug5805_19, bug5805_41, bug5805_42, bug5805_43 - OK.

Testing on Linux:
occt component :
Total MEMORY difference: 91744359 / 91607025
Total CPU difference: 56655.23 / 53736.87000000005
products component :
Total MEMORY difference: 22094849 / 22087503
Total CPU difference: 15661.009999999986 / 14930.379999999976

Testing on Windows:
occt component :
Total MEMORY difference: 53068531 / 53073176
Total CPU difference: 32011.453125 / 34041.078125
products component :


There are no differences in images found by testdiff.

apn

2015-03-11 20:21

administrator   ~0038288

Last edited: 2015-03-13 16:18

Dear msv,
Could you please review following test cases (also unstable or stable bad):
bugs modalg_2 bug5805_17 bug5805_18 bug5805_19 bug5805_20 bug5805_30 bug5805_32 bug5805_4 bug5805_41 bug5805_42 bug5805_43 bug5805_44

git

2015-03-13 17:39

administrator   ~0038342

Branch CR25718 has been updated forcibly by msv.

SHA-1: 4dae570d53a75974aca9e7af7c5645e66e66acec

msv

2015-03-13 17:45

developer   ~0038345

The failed tests became such because of the problem in the algorithm BRepAlgo_Loop. The fix of this bug made this algorithm produce stable result. It appears that for these test cases it became generating wrong result, though stable.
These cases are marked as known bad and the issue 0025925 is devoted to their fixing.

msv

2015-03-13 17:46

developer   ~0038346

Nothing was changed except for changing the failed test cases. So, please re-test only them.

msv

2015-03-13 17:49

developer   ~0038348

Concerning all cases in bug5805_* series, this fix should make them stable (regardless of state OK, BAD or FAILED). For failed one, I propose to mark them as TODO with bug 0025925.

mkv

2015-03-18 15:06

tester   ~0038645

Dear BugMaster,

Test cases
offset faces_type_a(002) A3, A4, A9
are OK now:

http://occt-tests/CR25718-master-occt-64/Debian60-64/offset/faces_type_a/A3.html
http://occt-tests/CR25718-master-occt-64/Debian60-64/offset/faces_type_a/A4.html
http://occt-tests/CR25718-master-occt-64/Debian60-64/offset/faces_type_a/A9.html

http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/offset/faces_type_a/A3.html
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/offset/faces_type_a/A4.html
http://occt-tests/CR25718-master-occt-64/Windows-64-VC10/offset/faces_type_a/A9.html

git

2015-08-28 14:55

administrator   ~0044802

Branch CR25718 has been deleted by msv.

SHA-1: 4dae570d53a75974aca9e7af7c5645e66e66acec

Related Changesets

occt: master 457b01e2

2015-03-19 13:08:06

msv


Committer: bugmaster Details Diff
0025718: Unstable work of tests in bug5805 series

Force stable work of the algorithm BRepAlgo_Loop by replacing DataMap collections with List and/or IndexedDataMap in order to provide iterations independent on the memory addresses.

Avoid uninitialized fields in default constructor of Extrema_POnSurf.

Mark bad tests as known bad.
Affected Issues
0025718
mod - src/BRepAlgo/BRepAlgo_Loop.cdl Diff File
mod - src/BRepAlgo/BRepAlgo_Loop.cxx Diff File
mod - src/Extrema/Extrema_POnSurf.lxx Diff File
mod - tests/offset/faces_type_a/A3 Diff File
mod - tests/offset/faces_type_a/A4 Diff File
mod - tests/offset/faces_type_a/A9 Diff File

Issue History

Date Modified Username Field Change
2015-01-19 07:19 abv New Issue
2015-01-19 07:19 abv Assigned To => msv
2015-01-19 07:19 abv Relationship added related to 0005805
2015-02-08 22:25 abv Note Added: 0037202
2015-02-19 15:34 git Note Added: 0037701
2015-02-19 15:39 msv Note Added: 0037703
2015-02-19 15:39 msv Assigned To msv => emv
2015-02-19 15:39 msv Status new => resolved
2015-02-19 15:39 msv Steps to Reproduce Updated
2015-02-19 16:01 emv Note Added: 0037708
2015-02-19 16:01 emv Assigned To emv => mkv
2015-02-19 16:01 emv Status resolved => reviewed
2015-02-20 19:40 git Note Added: 0037776
2015-02-25 17:20 mkv Note Added: 0037881
2015-02-25 17:21 mkv Note Added: 0037882
2015-02-25 17:22 mkv Test case number => bugs modalg_2(007) bug5805_19, bug5805_41, bug5805_42, bug5805_43
2015-02-25 17:22 mkv Assigned To mkv => msv
2015-02-25 17:22 mkv Status reviewed => assigned
2015-02-25 17:22 mkv Description Updated
2015-02-25 17:22 mkv Steps to Reproduce Updated
2015-02-25 17:22 mkv Note Edited: 0037882
2015-03-11 20:21 apn Note Added: 0038288
2015-03-11 20:22 apn Note Edited: 0038288
2015-03-13 16:18 apn Note Edited: 0038288
2015-03-13 17:39 git Note Added: 0038342
2015-03-13 17:45 msv Note Added: 0038345
2015-03-13 17:45 msv Status assigned => resolved
2015-03-13 17:46 msv Note Added: 0038346
2015-03-13 17:46 msv Assigned To msv => bugmaster
2015-03-13 17:46 msv Status resolved => reviewed
2015-03-13 17:49 msv Note Added: 0038348
2015-03-13 17:57 mkv Assigned To bugmaster => mkv
2015-03-18 15:06 mkv Note Added: 0038645
2015-03-18 15:06 mkv Assigned To mkv => bugmaster
2015-03-18 15:06 mkv Status reviewed => tested
2015-03-20 13:34 bugmaster Changeset attached => occt master 457b01e2
2015-03-20 13:34 bugmaster Status tested => verified
2015-03-20 13:34 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-08-28 14:55 git Note Added: 0044802